mengubah unlimited menjadi bismillah

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Akhinet.id – Internet Unlimited</title>
+  <title>Akhinet.id – Bismillahh</title>
 
   <!-- Favicon -->
   <link rel="icon" href="assets/img/akhinet.png">
