--- a/index.html
+++ b/index.html
@@ -1,394 +1,105 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Akhinet.id – Bismillahh</title>
+  <meta charset="utf-8">
+  <title>Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Favicon -->
-  <link rel="icon" href="assets/img/akhinet.png">
-
-  <!-- Bootstrap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
-  <!-- AOS -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <!-- Bootstrap 5 CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
-    :root{
-      --primary:#0d47a1;
-      --light:#f4f6f8;
-      --gray:#e9ecef;
-      --text:#2b034d;
-    }
-
-    
-
-    body{
-      font-family:Arial, Helvetica, sans-serif;
-      background:#fff;
-      color:var(--text);
+    body {
+      font-family: 'Segoe UI', sans-serif;
     }
 
     /* Navbar */
-    .navbar{
-      background:#f0f2f3;
-      box-shadow:0 2px 8px rgba(236, 12, 12, 0.08);
-    }
-    .navbar .nav-link,
-    .navbar-brand{
-      color:#333 !important;
+    .navbar {
+      background: linear-gradient(90deg, #0d6efd, #0b5ed7);
     }
 
-    /* Hero */
-    .hero{
-      background:linear-gradient(180deg,#f4f6f8,#ffff76,#f4f6f8);
-      padding:140px 0 100px;
-    }
-    .hero h1{
-      font-weight:800;
-    }
-
-    .btn-main{
-      background:var(--primary);
-      color:#ffff76;
-      border-radius:30px;
-      padding:10px 30px;
-    }
-    .btn-main:hover{
-      background:#09357a;
-      color:#fff;
+    /* Hero Section */
+    .hero {
+      background-color: #e7f0ff;
+      padding: 80px 0 140px;
+      position: relative;
+      text-align: center;
     }
 
-    .section{
-      padding:70px 0;
+    .hero img {
+      width: 160px;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 5px solid #fff;
+      box-shadow: 0 4px 15px rgba(0,0,0,.2);
     }
 
-    /* Paket */
-    .paket-card{
-      background:#fff;
-      border:1px solid var(--gray);
-      border-radius:18px;
-      padding:30px;
-      text-align:center;
-      transition:.3s;
-      height:100%;
-    }
-    .paket-card:hover{
-      transform:translateY(-8px);
-      box-shadow:0 12px 25px rgba(0,0,0,.12);
+    .hero h1 {
+      margin-top: 20px;
+      font-weight: 600;
     }
 
-    /* Feature */
-    .feature-box{
-      background:#fff;
-      border-radius:16px;
-      padding:30px;
-      text-align:center;
-      height:100%;
-      border:1px solid var(--gray);
-    }
-    .feature-box i{
-      font-size:38px;
-      color:var(--primary);
+    .hero p {
+      color: #555;
     }
 
-    /* Kontak */
-    .contact{
-      background:var(--light);
-    }
-
-    footer{
-      background:#f1f1f1;
-      color:#666;
+    /* Wave */
+    .wave {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
     }
   </style>
 </head>
+
 <body>
 
-
-
-
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center gap-2 fw-bold" href="#">
-      <img src="assets/img/akhinet.png" alt="akhinet.id" height="32">
-      <span>akhinet.id</span>
-    </a>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+    <a class="navbar-brand fw-bold" href="#">Ah. Khoirul Himam</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="menu">
+    <div class="collapse navbar-collapse" id="navmenu">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#paket">Paket</a></li>
-        <li class="nav-item"><a class="nav-link" href="#keunggulan">Keunggulan</a></li>
-        <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <!-- HERO -->
-
-
 <section class="hero">
   <div class="container">
-    <div class="row align-items-center">
-
-      <!-- TEXT -->
-      <div class="col-lg-6 text-lg-start text-center" data-aos="fade-right">
-        <h1 class="display-5">Internet Unlimited</h1>
-        <p class="lead">
-          Full Fiber Optic • Tanpa Batas Kuota <br>
-          <strong>Internete Tonggo Dewe</strong>
-        </p>
-        <button class="btn btn-main btn-lg mt-3"
-          data-bs-toggle="modal"
-          data-bs-target="#promoModal">
-          Lihat Promo
-        </button>
-      </div>
-
-      <!-- IMAGE -->
-      <div class="col-lg-6 text-center mt-4 mt-lg-0" data-aos="fade-left">
-        <img src="assets/img/akhinet.png"
-             alt="Akhinet Internet"
-             class="img-fluid"
-             style="max-height:280px">
-      </div>
-
-    </div>
+    <img src="himam.jpg" alt="Profile">
+    <h1>Ah. Khoirul Himam</h1>
+    <p> CEO yang menyamar</p>
   </div>
+
+  <!-- SVG WAVE -->
+  <svg class="wave" viewBox="0 0 1440 320">
+    <path fill="#ffffff" fill-opacity="1"
+      d="M0,256L60,245.3C120,235,240,213,360,197.3C480,181,600,171,720,181.3C840,192,960,224,1080,224C1200,224,1320,192,1380,176L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+    </path>
+  </svg>
 </section>
 
-<!-- PAKET -->
-<section id="paket" class="section">
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+
+<!-- FOOTER -->
+<footer class="text-center text-white py-3" style="background-color:#0d6efd;">
   <div class="container">
-    <h2 class="text-center fw-bold mb-5" data-aos="fade-up">
-      Paket Internet akhinet.id
-    </h2>
-
-    <div class="row g-4">
-      <div class="col-md-3" data-aos="zoom-in">
-        <div class="paket-card">
-          <h5>Up To 10 Mbps</h5>
-          <p>Unlimited</p>
-          <h4 class="fw-bold">Rp 135.000</h4>
-          <a href="https://wa.me/628194170007?text=Halo%20Akhinet,%20saya%20ingin%20berlangganan%20paket%20internet"
-          target="_blank"
-          class="btn btn-main mt-2">
-          Berlangganan
-          </a>
-        </div>
-      </div>
-
-      <div class="col-md-3" data-aos="zoom-in" data-aos-delay="100">
-        <div class="paket-card">
-          <h5>Up To 15 Mbps</h5>
-          <p>Unlimited</p>
-          <h4 class="fw-bold">Rp 165.000</h4>
-          <a href="https://wa.me/628194170007?text=Halo%20Akhinet,%20saya%20ingin%20berlangganan%20paket%20internet"
-          target="_blank"
-          class="btn btn-main mt-2">
-          Berlangganan
-          </a>
-        </div>
-      </div>
-
-      <div class="col-md-3" data-aos="zoom-in" data-aos-delay="200">
-        <div class="paket-card">
-          <h5>Up To 20 Mbps</h5>
-          <p>Unlimited</p>
-          <h4 class="fw-bold">Rp 200.000</h4>
-          <a href="https://wa.me/628194170007?text=Halo%20Akhinet,%20saya%20ingin%20berlangganan%20paket%20internet"
-          target="_blank"
-          class="btn btn-main mt-2">
-          Berlangganan
-          </a>
-
-        </div>
-      </div>
-
-      <div class="col-md-3" data-aos="zoom-in" data-aos-delay="300">
-        <div class="paket-card">
-          <h5>Up To 30 Mbps</h5>
-          <p>Unlimited</p>
-          <h4 class="fw-bold">Rp 250.000</h4>
-          <a href="https://wa.me/628194170007?text=Halo%20Akhinet,%20saya%20ingin%20berlangganan%20paket%20internet"
-          target="_blank"
-          class="btn btn-main mt-2">
-          Berlangganan
-          </a>
-        </div>
-      </div>
-    </div>
+    <small>copyright@akhivanja</small>
   </div>
-</section>
-
-<!-- KEUNGGULAN -->
-<section id="keunggulan" class="section" style="background:var(--light)">
-  <div class="container">
-    <h2 class="text-center fw-bold mb-4" data-aos="fade-up">
-      Kenapa akhinet.id?
-    </h2>
-
-    <div class="row g-4">
-      <div class="col-md-4" data-aos="fade-right">
-        <div class="feature-box">
-          <i class="bi bi-wifi"></i>
-          <h6 class="mt-3">Unlimited</h6>
-          <p class="small">WIFI unlimited tanpa batasan kuota dan FUP dengan harga yang terjangkau</p>
-        </div>
-      </div>
-
-      <div class="col-md-4" data-aos="fade-up">
-        <div class="feature-box">
-          <i class="bi bi-lightning-charge"></i>
-          <h6 class="mt-3">Fiber Optic</h6>
-          <p class="small">Cepat & berkualitas tinggi untuk koneksi yang selalu stabil</p>
-        </div>
-      </div>
-
-      <div class="col-md-4" data-aos="fade-left">
-        <div class="feature-box">
-          <i class="bi bi-headset"></i>
-          <h6 class="mt-3">Support</h6>
-          <p class="small">Customer Service</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CAKUPAN AREA -->
-<section id="cakupan" class="section">
-  <div class="container">
-    <h2 class="text-center fw-bold mb-5" data-aos="fade-up">
-      Cakupan Area Layanan
-    </h2>
-
-    <div class="row align-items-center">
-
-      <!-- KIRI: MAP -->
-      <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
-        <div class="ratio ratio-16x9 rounded shadow">
-          <iframe
-            src="https://www.google.com/maps?q=-7.043220, 110.457559&hl=id&z=15&output=embed"
-            style="border:0;"
-            allowfullscreen
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
-        </div>
-      </div>
-
-      <!-- KANAN: TEKS -->
-      <div class="col-lg-6" data-aos="fade-left">
-        <h4 class="fw-bold mb-3">Area yang Terjangkau</h4>
-        <p>
-          Layanan internet <strong>akhinet.id</strong> saat ini tersedia di beberapa area berikut:
-        </p>
-
-        <ul class="list-unstyled">
-          <li class="mb-2">📍 Kelurahan Mangunharjo</li>
-          <li class="mb-2">📍 Kelurahan Kedungmundu</li>
-          <li class="mb-2">📍 Kelurahan Sendangmulyo</li>
-          <li class="mb-2">📍 Kelurahan Meteseh</li>
-          <li class="mb-2">📍 Kelurahan Sambiroto</li>
-          <li class="mb-2">📍 Area Lainnya</li>
-        </ul>
-
-        </div>
-
-    </div>
-  </div>
-</section>
-
-
-
-<!-- KONTAK -->
-<section id="kontak" class="section contact text-center">
-  <div class="container" data-aos="fade-up">
-    <h2 class="fw-bold">Hubungi Kami</h2>
-    <p>Customer Support akhinet.id</p>
-    <h5><i class="bi bi-whatsapp"></i> 0819 4170 007</h5>
-    <a href="https://wa.me/628194170007"
-   target="_blank"
-   class="btn btn-main rounded-pill mt-3 px-4">
-  <i class="bi bi-whatsapp"></i> Chat WhatsApp
-</a>
-
-  </div>
-</section>
-
-<footer class="py-4 text-center">
-  <p class="mb-0">
-    Powered by PT. Akhi Network Indonesia | akhinet.id
-  </p>
 </footer>
-
-<!-- MODAL PROMO -->
-<div class="modal fade" id="promoModal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Promo akhinet.id</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <p><strong>GRATIS</strong> Souvenir & hadiah menarik</p>
-        <p>Minimal berlangganan 3 bulan</p>
-      </div>
-      <div class="modal-footer">
-        <a href="https://wa.me/628194170007?text=Halo%20Akhinet,%20saya%20ingin%20berlangganan%20internet"
-   target="_blank"
-   class="btn btn-main">
-  Chat WhatsApp
-</a>
-
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-<script>
-  AOS.init({duration:900, once:true});
-</script>
-
-<script>
-  console.log("Script suara aktif");
-
-  let hasPlayed = false;
-
-  function playOpeningSound(){
-    if(!hasPlayed){
-      const audio = document.getElementById("openSound");
-      if(!audio){
-        console.log("Audio tidak ditemukan");
-        return;
-      }
-
-      audio.volume = 0.5;
-      audio.play()
-        .then(()=>console.log("Suara diputar"))
-        .catch(err=>console.log("Gagal:", err));
-
-      hasPlayed = true;
-      document.removeEventListener("click", playOpeningSound);
-      document.removeEventListener("scroll", playOpeningSound);
-    }
-  }
-
-  document.addEventListener("click", playOpeningSound);
-  document.addEventListener("scroll", playOpeningSound);
-</script>
 
 
 </body>
